--- a/ChatEApp/ChatEApp-war/web/index.html
+++ b/ChatEApp/ChatEApp-war/web/index.html
@@ -6,20 +6,22 @@ and open the template in the editor.
 -->
 <html>
     <head>
-        <title>TODO supply a title</title>
+        <title>Chat iMessage</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Latest compiled and minified CSS -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-		<link rel="stylesheet" href="style.css">
-		<!-- Optional theme -->
-		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css" />
+        <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-theme.min.css" />
+        <link rel="stylesheet" href="http://code.jquery.com/ui/1.10.3/themes/smoothness/jquery-ui.css" />
+        <link rel="stylesheet" href="css/style.css" />
 
-		<!-- Latest compiled and minified JavaScript -->
-		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+
+        <script src="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/js/bootstrap.min.js"></script>
+        <script src="http://code.jquery.com/ui/1.10.3/jquery-ui.js"></script>
     </head>
     <body>
-        <div>TODO write content</div>
 
         <div class="container">
         	<div class="row">
@@ -34,16 +36,16 @@ and open the template in the editor.
 						<div class="form-group">
 						  <label class="col-md-4 control-label" for="pseudonyme">Pseudonyme</label>  
 						  <div class="col-md-6">
-						  <input id="pseudonyme" name="pseudonyme" type="text" placeholder="Pseudo" class="form-control input-md" required="">
+						  <input id="pseudonyme" name="pseudonyme" type="text" placeholder="Pseudo" class="form-control input-md" required="required">
 						    
 						  </div>
 						</div>
 
 						<!-- Select Basic -->
 						<div class="form-group">
-						  <label class="col-md-4 control-label" for="Salle">Salle :</label>
+						  <label class="col-md-4 control-label" for="room">Salle :</label>
 						  <div class="col-md-6">
-						    <select id="Salle" name="Salle" class="form-control">
+                                                      <select id="room" name="room" class="form-control" required="required">
 						      <option value="0" disabled selected>Choisissez</option>
 						      <option value="1">Salle 1</option>
 						      <option value="2">Salle 2</option>
@@ -68,7 +70,7 @@ and open the template in the editor.
 						<fieldset>
 
 						<!-- Form Name -->
-						<legend>Pseudonyme@salleX</legend>
+                                                <legend class="infoRoomUser">Pseudonyme@salleX</legend>
 
 						<!-- Text input-->
 						<div class="col-md-offset-1 col-md-10" style="border:1px solid black;" id="left">
@@ -95,20 +97,7 @@ and open the template in the editor.
         </div>
 
         <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
-    	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    	<script type="text/javascript">
-    		$(document).ready(function(){
-    			$("#salle").hide();
-			    $("#entrer").click(function(){
-				    $("#home").slideUp( "slow" );
-				    $("#salle").slideDown( "slow" );
-    			});
-    			$("#sortir").click(function(){
-			    $("#salle").slideUp( "slow" );
-			    $("#home").slideDown( "slow" );
-    			});
-			});
-    	</script>
+        <script type="text/javascript" src="js/jsClient.js"></script>
+        
     </body>
 </html>
